@@ -1,3 +1,6 @@
+2010-05-25
+ Added a syntax token for object definitions.
+
 2010-05-23
  Added a syntax token for definitions.
 
